<resources>
    <string name="app_name" translatable="false">Englesko-hrvatski rječnik</string>
    <string name="appId" translatable="false">ca-app-pub-3225864464920538~2492612565</string>

    <!--  TEST  -->
    <!--    <string name="adUnitId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="exit_confirmation_row_1">Jeste li sigurni</string>
    <string name="exit_confirmation_row_2">da želite izaći iz aplikacije?</string>
    <string name="exit_button_confirm" translatable="false">✓</string>
    <string name="exit_button_cancel" translatable="false">✕</string>

    <string name="app_button_left" translatable="false">Switch pages</string>
    <string name="app_button_right" translatable="false">Close application</string>
    <string name="app_button_english" translatable="false">English</string>
    <string name="app_button_croatian" translatable="false">Hrvatski</string>
</resources>